syntax = "proto3";
package cni;
option go_package = "proto";

service CniDataplane {
    rpc Add (AddRequest) returns (AddReply) {}
    rpc Del (DelRequest) returns (DelReply) {}
}


message AddRequest {
    string interface_name = 1;
    string netns = 2;
    string desired_host_interface_name = 3;  // Does this make sense for external dataplanes?
    ContainerSettings settings = 4;
    repeated IPConfig container_ips = 5;
    repeated IPNet container_routes = 6;
}

message ContainerSettings {
    bool allow_ip_forwarding = 1;
}

message IP {
    bool is_ipv6 = 1;
    bytes ip = 2;   // Always 4 bytes for an IPv4, 16 for an IPv6
}

message IPConfig {
    IPNet ip = 1;
    IP gateway = 2;
}

message IPNet {
    IP ip = 1;
    int32 prefix_len = 2;
}

message AddReply {
    bool successful = 1;
    string error_message = 2;
    string interface_name = 3;
    string container_mac = 4;
}

message DelRequest {
    string interface_name = 1;
    string netns = 2;
}

message DelReply {
    bool successful = 1;
    string error_message = 2;
}

